beta version easyres (migrated from HermesView to EasyRes + deployed on netlify)

--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -77,6 +77,10 @@
     background-color: #007bff; 
 }
 
+.unavailable-day {
+    background-color: red;
+}
+
 /* Media query for screens smaller than 495px */
 @media screen and (max-width: 495px) {
     /* Calendar.css */
