--- a/src/styles/MapComponent.css
+++ b/src/styles/MapComponent.css
@@ -2,4 +2,38 @@
     background-color: beige;
     width: 100%;
     height: 100%;
+    overflow: auto;
+    /* Allow scrolling */
+    position: relative;
+    /* Ensure the map is contained within this element */
+}
+
+.map-table-popup-window {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    z-index: 2000;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.map-table-popup-window-container {
+    position: relative;
+    /* Make the container relative to the parent */
+    max-width: 90%;
+    /* Set max width for responsiveness */
+    width: 600px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 20px;
+    /* Adjust padding to fit smaller screens */
+    box-sizing: border-box;
 }
