--- a/src/styles/MapComponent.css
+++ b/src/styles/MapComponent.css
@@ -1,9 +1,10 @@
 .map {
     background-color: beige;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    /* Set the height to the viewport height */
     overflow: auto;
-    /* Allow scrolling */
+    /* Enable scrolling */
     position: relative;
     /* Ensure the map is contained within this element */
 }
@@ -23,9 +24,7 @@
 
 .map-table-popup-window-container {
     position: relative;
-    /* Make the container relative to the parent */
     max-width: 90%;
-    /* Set max width for responsiveness */
     width: 600px;
     background-color: white;
     border-radius: 10px;
@@ -34,6 +33,5 @@
     align-items: center;
     justify-content: center;
     padding: 50px 20px;
-    /* Adjust padding to fit smaller screens */
     box-sizing: border-box;
 }
